[package]
name = "rust-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.6.1"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"]  } 
env_logger = "*"
notify = "6.1.1"
time = "0.3.28"
regex = "1.9.5"
md-5 = "0.10.6"
hex = "0.4.3"
hex-literal = "0.4.1"
